--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -153,7 +153,7 @@
             <p class="welcome-text">Welcome, <%= user.name %>! Please provide your valuable feedback.</p>
         </div>
         
-        <form action="/home/feedback" method="POST">
+        <form action="/home" method="POST">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" value="<%= user.name %>" readonly>
